--- a/lobo.html
+++ b/lobo.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O lobo e a cabra</title>
 </head>
+
 <body>
     <h1>O lobo e a cabra</h1>
-    <p>Um lobo viu uma cabra pastando em cima de um rochedo escarpado e, como não tinha condições de subir até lá, resolveu convencer a cabra a vir mais para baixo.</p>
+    <p>Um lobo viu uma cabra pastando em cima de um rochedo escarpado e, como não tinha condições de subir até lá,
+        resolveu convencer a cabra a vir mais para baixo.</p>
     <p>– Minha senhora, que perigo! – disse ele numa voz amistosa.</p>
     <p>– Não seja imprudente, desça daí! Aqui embaixo está cheio de comida, uma comida muito mais gostosa.</p>
     <p>Mas a cabra conhecia os truques do esperto lobo.</p>
@@ -15,5 +18,7 @@
     <p>Moral: Cuidado quando um inimigo dá um conselho amigo.</p>
 
     <button> <a href="index.html">voltar</a> </button>
+
 </body>
+
 </html>
