--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="leao.html"> O leão e o ratinho</a></li>
         <li><a href="lobo.html">O lobo e a cabra</a></li>
-        <li>A raposa e a uva</li>
+        <li><a href="raposa.html">A raposa e a uva</a></li>
     </ul>
 </body>
 </html>
