--- a/leao.html
+++ b/leao.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>O leão e o ratinho</h1>
+    <img src="leao.jpg" alt="um leao com um rato sobre a sua cabeça em uma floresta">
    <p>Um leão, cansado de tanto caçar, dormia espichado debaixo da sombra boa de uma árvore. Vieram uns ratinhos
     passear em cima dele e ele acordou. 
    </p>
