--- a/lobo.html
+++ b/lobo.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>O lobo e a cabra</h1>
+    <img src="lobocabra.jpg" alt="um lobo e uma cabra na montanha">
     <p>Um lobo viu uma cabra pastando em cima de um rochedo escarpado e, como não tinha condições de subir até lá,
         resolveu convencer a cabra a vir mais para baixo.</p>
     <p>– Minha senhora, que perigo! – disse ele numa voz amistosa.</p>
