--- a/raposa.html
+++ b/raposa.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>A raposa e a uva</h1>
+    <img src="raposaeuva.jpeg" alt="raposa com fome olhando a uva na floresta">
     <p>Morta de fome, uma raposa foi até um vinhedo sabendo que ia encontrar muita uva. A safra tinha sido excelente.</p>
     <p>Ao ver a parreira carregada de cachos enormes, a raposa lambeu os beiços. Só que sua alegria durou pouco: por mais que tentasse, não conseguia alcançar as uvas.</p>
     <p>Por fim, cansada de tantos esforços inúteis, resolveu ir embora, dizendo:</p>
