--- a/leao.html
+++ b/leao.html
@@ -18,7 +18,7 @@
         Não conseguindo se soltar, fazia a floresta inteira tremer com seus urros de raiva. Nisso apareceu o ratinho, e com seus dentes afiados roeu as cordas e soltou o leão.
     </p>
     <p><b>Moral:</b> <i>Uma boa ação ganha outra.</i> </p>
-    <p> <a href="https://youtu.be/6xHSXQZazck?si=HWl8SwCM4xdZu_bS">assista o video</a></p>
+    <p> <a href="https://youtu.be/YJyy3VeTXFQ?si=AraBP_GkXsMF5qH3">assista o video</a></p>
     <button><a href="index.html">voltar</a></button>
 </body>
 </html>
