--- a/lobo.html
+++ b/lobo.html
@@ -17,7 +17,7 @@
     <p>Mas a cabra conhecia os truques do esperto lobo.</p>
     <p>– Para o senhor, tanto faz se a relva que eu como é boa ou ruim! O que o senhor quer é me comer!</p>
     <p> <b>Moral:</b> <i> Cuidado quando um inimigo dá um conselho amigo.</i></p>
-    <p> <a href="https://youtu.be/gPfFHNmtRE8?si=MT9XmAjIrDx6lkad">assista o video</a></p>
+    <p> <a href="https://youtu.be/gPfFHNmtRE8?si=MT9XmAjIrDx6lkad" target="_blank">assista o video</a></p>
 
     <button> <a href="index.html">voltar</a> </button>
 
