--- a/raposa.html
+++ b/raposa.html
@@ -14,7 +14,7 @@
     <p>- Por mim, quem quiser essas uvas pode levar. Estão verdes, estão azedas, não me servem. Se alguem me desse essas uvas eu não comeria... 
     </p>
     <p> <b>Moral da história:</b> <i>Desprezar o que não se consegue conquistar é fácil.</i></p>
-    <p> <a href="https://youtu.be/6xHSXQZazck?si=xGRTUdePuw2XwdGm">assista o video</a></p>
+    <p> <a href="https://youtu.be/6xHSXQZazck?si=xGRTUdePuw2XwdGm" target="_blank">assista o video</a></p>
     <button>  <a href="index.html"> voltar </a></button>
 </body>
 </html>
