--- a/raposa.html
+++ b/raposa.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A raposa e a uva</title>
+    <link rel="stylesheet" href="stale.css">
 </head>
 <body>
     <h1>A raposa e a uva</h1>
