--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fábulas</title>
+    <style>
+        h1{
+            text-align: center;
+            color: aliceblue;
+        }
+    </style>
 </head>
 <body>
     <h1>Fabulas</h1>
