--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
             text-align: center;
             color: aliceblue;
         }
+        ul{
+            list-style: none;
+            font-size: 30px;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+        }
     </style>
 </head>
 <body>
