--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fábulas</title>
     <style>
+        body{
+            color: rgb(212, 45, 33);
+        }
         h1{
             text-align: center;
             color: aliceblue;
