--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
         <li><a href="lobo.html">O lobo e a cabra</a></li>
         <li><a href="raposa.html">A raposa e a uva</a></li>
     </ul>
+    <p><img src="leao.jpg" alt=""></p>
+    <p><img src="lobocabra.jpg" alt=""></p>
+    <p><img src="raposaeuva.jpeg" alt=""></p>
 </body>
 </html>
