--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Fábulas</title>
     <style>
         body{
-            color: rgb(212, 45, 33);
+           background-color: rgb(226, 43, 58);
         }
         h1{
             text-align: center;
