--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
             font-size: 30px;
             font-family: Georgia, 'Times New Roman', Times, serif;
         }
+
+        img{
+            width: 300px;
+            border: 5px;
+        }
     </style>
 </head>
 <body>
