--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
         <li><a href="lobo.html">O lobo e a cabra</a></li>
         <li><a href="raposa.html">A raposa e a uva</a></li>
     </ul>
-    <p><img src="leao.jpg" alt=""> <img src="lobocabra.jpg" alt=""> <img src="raposaeuva.jpeg" alt=""></p>
+    <img src="leao.jpg" alt=""> <img src="lobocabra.jpg" alt=""> <img src="raposaeuva.jpeg" alt="">
 </body>
 </html>
