--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
 
         img{
-            width: 300px;
+            height: 200px;
             border: 5px;
         }
     </style>
