--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             height: 200px;
             width: 400px;
             border: 5px;
+            margin: auto;
+            display: block;
         }
     </style>
 </head>
