--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
         <li><a href="lobo.html">O lobo e a cabra</a></li>
         <li><a href="raposa.html">A raposa e a uva</a></li>
     </ul>
-    <img src="leao.jpg" alt=""> <img src="lobocabra.jpg" alt=""> <img src="raposaeuva.jpeg" alt="">
+   <p style="text-align: center;"> <img src="leao.jpg" alt=""> <img src="lobocabra.jpg" alt=""> <img src="raposaeuva.jpeg" alt=""> </p>
 </body>
 </html>
