--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             list-style: none;
             font-size: 30px;
             font-family: Georgia, 'Times New Roman', Times, serif;
+            text-align: center;
+
         }
 
         img{
