--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             font-size: 30px;
             font-family: Georgia, 'Times New Roman', Times, serif;
             text-align: center;
-            color: aliceblue;
+            background-color: aliceblue;
 
         }
 
