--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 
         a{
             color: aliceblue;
+            text-decoration: none;
         }
-        
+
         img{
             height: 200px;
             width: 300px;
